con multiples bases de datos consultadas y andando

--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,5 +1,8 @@
 copy.src.files=false
 copy.src.target=
 index.file=index.php
-run.as=LOCAL
-url=http://ce-server:8080/ocular/
+remote.connection=Vserver
+remote.directory=/intranet
+remote.upload=ON_RUN
+run.as=REMOTE
+url=http://192.168.0.4:8080/intranet
